# django_online

./: .env.sample  data.json  pyproject.toml
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_alter_product_date_create_alter_product_description_and_more.py  0003_alter_product_date_create.py  0004_version.py  0005_product_is_public_product_owner.py
catalog/templates/catalog/: base.html  card.html  contacts.html  home.html  product_category_list.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_main_menu.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
materials/: models.py  urls.py  views.py
materials/migrations/: 0001_initial.py
materials/templates/materials/: materials_confirm_delete.html  materials_detail.html  materials_form.html  materials_list.html
users/: models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: activation_invalid.html  login.html  register.html  user_form.html  verify_acc.html
